--- a/setup.cfg
+++ b/setup.cfg
@@ -19,24 +19,24 @@ project_urls =
     Documentation = https://www.nipreps.org/dmriprep
 
 [options]
-python_requires = >=3.7
+python_requires =
 install_requires =
-    dipy >=1.0.0
+    dipy
     h5py
-    indexed_gzip >=0.8.8
-    nibabel ~= 3.0
-    nipype >= 1.5.1, < 2.0
-    niworkflows >= 1.4.0rc6, <1.5
+    indexed_gzip 
+    nibabel 
+    nipype 
+    niworkflows 
     numpy
-    pybids >= 0.11.1
+    pybids 
     pyyaml
-    sdcflows ~= 2.0.4
-    smriprep >= 0.8.0rc2
-    svgutils != 0.3.2
-    templateflow ~= 0.6
+    sdcflows 
+    smriprep 
+    svgutils 
+    templateflow 
     toml
 setup_requires =
-    setuptools >= 40.8.0
+    setuptools #>= 40.8.0
 test_requires =
     codecov
     coverage
@@ -66,9 +66,9 @@ datalad = datalad
 doc =
     nbsphinx
     packaging
-    pydot >= 1.2.3
+    pydot #>= 1.2.3
     pydotplus
-    sphinx >=2.1.2,<3.0
+    sphinx #>=2.1.2,<3.0
     sphinx-argparse
     sphinx_rtd_theme
     sphinxcontrib-apidoc ~= 0.3.0
@@ -82,9 +82,9 @@ popylar = popylar >= 0.2
 style =
     flake8 >= 3.7.0
 test =
-    pytest >= 4.4
-    pytest-xdist >= 2.0
-    pytest-cov >= 2.10.1
+    pytest #>= 4.4
+    pytest-xdist #>= 2.0
+    pytest-cov #>= 2.10.1
     pytest-env
     coverage
 tests =
